# diligent_hello_openxr

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
projects/: CMakeLists.txt
projects/helloxr/: CMakeLists.txt
projects/helloxr/src/: helloxr.cpp
projects/xrbase/: CMakeLists.txt
projects/xrbase/public/: actions.h  graphics_utilities.h  iapp.h  igraphicsbinding.h  paths.h  xrappbase.h
projects/xrbase/src/: actions.cpp  graphicsbinding_d3d11.cpp  graphicsbinding_d3d11.h  graphicsbinding_d3d12.cpp  graphicsbinding_d3d12.h  paths.cpp  xrappbase.cpp
src/: CMakeLists.txt  actions.cpp  actions.h  graphics_utilities.h  graphicsbinding_d3d11.cpp  graphicsbinding_d3d11.h  graphicsbinding_d3d12.cpp  helloxr.cpp  igraphicsbinding.cpp  igraphicsbinding.h  main_windows.cpp  xrappbase.cpp  xrappbase.h
